--- a/style.css
+++ b/style.css
@@ -859,7 +859,7 @@ footer p {
     padding-right: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
-    display: flex;
+    display: none;
     justify-content: space-around;
     align-items: center;
 }
@@ -895,6 +895,10 @@ footer p {
 #section_devis_to_generate_tva_exempt_text {
     font-size: 9px;
     text-align: center;
+}
+
+.section_to_generate_bonus_element {
+    display: none;
 }
 
 @media screen and (max-width: 480px) {
