--- a/style.css
+++ b/style.css
@@ -680,6 +680,10 @@ textarea::-webkit-scrollbar-thumb {
     margin-top: 5px;
 }
 
+#display_pseudo, #button_unsign {
+    display: none;
+}
+
 .error_container {
     height: 0px;
     overflow: hidden;
