--- a/style.css
+++ b/style.css
@@ -56,6 +56,53 @@ a {
     color: inherit;
 }
 
+.flex_full_container {
+    display: flex;
+    justify-content: space-between;
+}
+
+#column_menu_container {
+    display: flex;
+    display: none;
+    justify-content: flex-end;
+    gap: 1rem;
+    position: sticky;
+    top: 50px;
+    height: fit-content;
+}
+
+.column_menu_design_container {
+    background-color: var(--main-tier_color);
+    margin: 5px;
+    padding: 10px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 2rem;
+    margin-right: 20px;
+}
+
+
+
+.column_menu_element {
+    background-color: var(--main-bg-color);
+    padding: 5px;
+    border-radius: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.column_menu_design_container .button_basic {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.column_menu_width {
+    display: none;
+    width: calc((100vw - 1040px) / 2);
+}
+
 .full_page_container {
     margin-left: auto;
     margin-right: auto;
@@ -69,6 +116,9 @@ a {
     transition-timing-function: cubic-bezier(1, .1, .87, .71);
     height: auto;
     display: block;
+    flex: 1;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
@@ -455,7 +505,10 @@ textarea::-webkit-scrollbar-thumb {
 .full_section {
     width: 100%;
     align-items: center;
+    box-sizing: border-box;
 }
+
+
 
 #title_devis {
     border: 0px;
@@ -1269,6 +1322,85 @@ footer p {
     padding: 5px;
 }
 
+#story {
+    display: none;
+    margin-top: 30px;
+}
+
+.section_article {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-top: 0px;
+}
+
+.section_article * {
+    margin: 0px;
+}
+
+.article_container {
+    margin-top: 50px;
+}
+
+.head_article_title_img {
+    width: 90%;
+    border-radius: 100%;
+    max-width: 175px;
+}
+
+.head_article_title, .head_article_summarry {
+    display: flex;
+    flex: 1;
+    min-width: 250px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.head_article_title_rate_time_container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 10px;
+    margin-top: 15px;
+}
+
+.head_article_title_time_container, .head_article_title_rate_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.head_article_title_text {
+    font-size: 30px;
+}
+
+.head_article_title_underline {
+    font-size: 14px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.head_article_title_rate {
+    margin-top: 3px;
+}
+
+.head_article_title_rate_time_logo {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    font-weight: bold;
+}
+
+.head_article_title_rate_logo_svg {
+    width: 20px;
+}
+
 @media screen and (max-width: 480px) {
     h1 {
         font-size: 1rem;
@@ -1334,6 +1466,8 @@ footer p {
 
     .full_page_container {
         gap: 1.2rem;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 
     .section {
